// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > calls onClick handler when clicked 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <span>
      Click
    </span>
  </button>
</div>
`;

exports[`Button component > passes props to AntButton 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
</div>
`;

exports[`Button component > renders children text 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</div>
`;

exports[`Button component > renders disabled button 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    disabled=""
    type="button"
  >
    <span>
      Disabled
    </span>
  </button>
</div>
`;
